--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
   		cursor: pointer;
   		background-color: black;
   		font-family: 'Courier Prime', monospace;
-		font-size: 50px;
+		font-size: 30px;
 		height: 80px;
 		margin-left: 1200px;
+		margin-top: 1000px;
 		width: 360px;
 		margin-bottom: 0px;
 	}
@@ -104,6 +105,11 @@ rispondi il più sinceramente possibile.
 				<p>Continua →</p>
 			</button>
 		</a>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 		<br>
 		<br>
 		<p style="margin-bottom: 10px; font-size: 15px;">©2022 progetto di Ylenia La Spada </p>
