--- a/index_2.html
+++ b/index_2.html
@@ -77,7 +77,8 @@
   		font-family: 'Courier Prime', monospace;
 		font-size: 50px;
 		height: 80px;
-		margin-left: 1200px;
+		position: absolute;
+		left: 1200px;
 		width: 360px;
 		margin-bottom: 0px;
 	}
@@ -97,13 +98,19 @@ rispondi il più sinceramente possibile.
 		<pre id="output"></pre>
 	</div> -->
 
-	<img src="assets/intro2.png" style="width: 1500px; margin-left: 100px ">
+	<img src="assets/intro2.jpeg" style="width: 1500px; margin-left: 100px ">
 	<footer>
 		<a href="index_3.html">
 			<button class="button">
 				<p>Continua →</p>
 			</button>
 		</a>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
 		<br>
 		<br>
 		<p style="margin-bottom: 10px; font-size: 0px;">©2022 progetto di Ylenia La Spada </p>
