--- a/amore.html
+++ b/amore.html
@@ -97,7 +97,8 @@
   		font-family: 'Courier Prime', monospace;
 		font-size: 50px;
 		height: 50px;
-		margin-left: 30px;
+		position: absolute;
+		left: 100px;
 		width: 800px;
 	}
 
@@ -105,7 +106,7 @@
 <body>
 
 	<div>
-		<img src="assets/domanda1.png" style="width: 1500px">
+		<img src="assets/domanda1.jpeg" style="width: 1500px">
 	</div>
 
 	<div class="griglia">
@@ -125,14 +126,12 @@
 
 	<br>
 
-	<div class="griglia">
-			<div class="cella" style="width: 260px">
-			</div>
-			<div class="cella">
-				<button class="button">
-					<p style="color: black; font-size: 25px; text-align: center">Entrambi</p>
-				</button>
-			</div>
+	<a href="famiglia.html">
+			<button class="button">
+				<p style="color: black; font-size: 25px; text-align: center">Entrambi</p>
+			</button>
+
+
 
 </body>
 
