--- a/felice.html
+++ b/felice.html
@@ -97,7 +97,8 @@
   		font-family: 'Courier Prime', monospace;
 		font-size: 50px;
 		height: 50px;
-		margin-left: 30px;
+		position: absolute;
+		left: 400px;
 		width: 800px;
 	}
 	a {
@@ -109,7 +110,7 @@
 
 	<div>
 		<p>
-			<img src="assets/domanda1.png" style="height: 80px; margin-left: 400px;">
+			<img src="assets/domanda1.jpeg" style="height: 80px; margin-left: 400px;">
 		</p>
 	</div>
 
@@ -132,16 +133,10 @@
 
 	<br>
 
-	<div class="griglia">
-			<div class="cella" style="width: 260px;">
-			</div>
-			<div class="cella">
-				<button class="button">
-					<a href="famiglia.html">
-					<p style="color: white; font-size: 25px; text-align: center"> Entrambi</p>
-				</a>
-				</button>
-			</div>
+	<a href="famiglia.html">
+			<button class="button">
+				<p style="color: white; font-size: 25px; text-align: center">Entrambi</p>
+			</button>
 
 
 </body>
