--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   		font-family: 'Courier Prime', monospace;
 		font-size: 30px;
 		height: 80px;
-		margin-left: 1200px;
-		margin-top: 2000px;
+		position: absolute;
+		left: 1200px;
 		width: 360px;
 		margin-bottom: 0px;
 	}
@@ -98,7 +98,7 @@ rispondi il più sinceramente possibile.
 		<pre id="output"></pre>
 	</div> -->
 
-	<img src="assets/intro.png" style="width: 1300px; margin-left: 100px ">
+	<img src="assets/intro.jpeg" style="width: 1300px; margin-left: 100px ">
 	<footer>
 		<a href="index_2.html">
 			<button class="button">
