--- a/makeup.html
+++ b/makeup.html
@@ -106,7 +106,7 @@
 
 	<div>
 		<p>
-			<img src="assets/domanda3.png" style="height: 80px; margin-left: 400px;">
+			<img src="assets/domanda3.jpeg" style="height: 80px; margin-left: 400px;">
 		</p>
 	</div>
 
