--- a/smalto.html
+++ b/smalto.html
@@ -106,7 +106,7 @@
 
 	<div>
 		<p>
-			<img src="assets/domanda4.png" style="height: 80px; margin-left: 400px;">
+			<img src="assets/domanda4.jpeg" style="height: 80px; margin-left: 400px;">
 		</p>
 	</div>
 
