--- a/vestiario.html
+++ b/vestiario.html
@@ -106,7 +106,7 @@
 
 	<div>
 		<p>
-			<img src="assets/domanda5.png" style="height: 80px; margin-left: 400px;">
+			<img src="assets/domanda5.jpeg" style="height: 80px; margin-left: 400px;">
 		</p>
 	</div>
 
