--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ rispondi il più sinceramente possibile.
 		<br>
 		<br>
 		<br>
-		<p style="margin-bottom: 10px; font-size: 15px;">©2022 progetto di Ylenia La Spada </p>
+		<p style="margin-bottom: 10px; font-size: 15px; top: 500px;">©2022 progetto di Ylenia La Spada </p>
 	</footer>
 
 </body>
