--- a/index_3.html
+++ b/index_3.html
@@ -99,7 +99,7 @@ rispondi il più sinceramente possibile.
 		<pre id="output"></pre>
 	</div> -->
 
-	<img src="assets/intro3.jpeg" style="width: 1500px; margin-left: 100px ">
+	<img src="assets/intro22.png" style="width: 1500px; margin-left: 100px ">
 	<footer>
 		<a href="felice.html">
 			<button class="button">
