--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ rispondi il più sinceramente possibile.
 	<footer>
 		<a href="index_2.html">
 			<button class="button">
-				<p>Continua→</p>
+				<p style="margin-bottom: 10px">Continua→</p>
 			</button>
 		</a>
 		<br>
