--- a/index_3.html
+++ b/index_3.html
@@ -103,7 +103,7 @@ rispondi il più sinceramente possibile.
 	<footer>
 		<a href="felice.html">
 			<button class="button">
-				<p>Inizia→</p>
+				<p style="margin-bottom: 10px">Inizia→</p>
 			</button>
 		</a>
 		<br>
