--- a/index_2.html
+++ b/index_2.html
@@ -103,7 +103,7 @@ rispondi il più sinceramente possibile.
 	<footer>
 		<a href="index_3.html">
 			<button class="button">
-				<p>Continua→</p>
+				<p style="margin-bottom: 10px">Continua→</p>
 			</button>
 		</a>
 		<br>
