--- a/famiglia.html
+++ b/famiglia.html
@@ -129,16 +129,10 @@
 
 	<br>
 
-	<div class="griglia">
-			<div class="cella" style="width: 260px">
-			</div>
-			<div class="cella">
-				<a href="makeup.html">
-				<button class="button">
-					<p style="font-size: 25px; text-align: center">Entrambi</p>
-				</button>
-			</a>
-			</div>
+	<a href="makeup.html">
+			<button class="button">
+				<p style="color: white; font-size: 25px; text-align: center">Entrambi</p>
+			</button>
 
 </body>
 
