--- a/donna.html
+++ b/donna.html
@@ -97,7 +97,8 @@
   		font-family: 'Courier Prime', monospace;
 		font-size: 50px;
 		height: 50px;
-		margin-left: 30px;
+		position: absolute;
+		left: 450px;
 		width: 800px;
 	}
 
