--- a/vestiario.html
+++ b/vestiario.html
@@ -97,7 +97,8 @@
   		font-family: 'Courier Prime', monospace;
 		font-size: 50px;
 		height: 50px;
-		margin-left: 30px;
+		position: absolute;
+		left: 400px;
 		width: 800px;
 	}
 
@@ -111,7 +112,7 @@
 	</div>
 
 	<div class="griglia">
-		<div class="cella" style="width: 260px">
+		<div class="cella" style="width: 300px">
 		</div>
 		<div class="cella">
 			<a href="donna.html">
